Add docker push to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
 - docker build -f Dockerfile -t $REPO:$COMMIT .
 - docker tag $REPO:$COMMIT $REPO:$TAG
+- docker push $REPO:$TAG
 
 env:
   global:
