Deploy releases with tags on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,9 @@ script: |
 env:
   global:
   - COMMIT=${TRAVIS_COMMIT::8}
+jobs:
+  include:
+    - stage: deploy
+      if: tag IS present
+      script: make release
+
