--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,19 @@ before_install:
 - docker pull golang:alpine
 install:
 - make \
-  USER=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
-  EXECUTABLE=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}')
+    USER=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
+    EXECUTABLE=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}')
 script: |
   export IMAGE_NAME=gableroux/gothub
   docker build \
     --build-arg user=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
     --build-arg repo=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}') \
     Dockerfile \
-    -t $IMAGE_NAME:$COMMIT .
+    -t ${IMAGE_NAME}:${COMMIT} .
   docker login -u $REGISTRY_USER -p $REGISTRY_PASS
   docker push "${IMAGE_NAME}:${COMMIT}"
   if [ "$TRAVIS_BRANCH" == "master" ]; then
-    docker tag $IMAGE_NAME:$COMMIT $IMAGE_NAME:latest
+    docker tag ${IMAGE_NAME}:${COMMIT} ${IMAGE_NAME}:latest
     docker push "${IMAGE_NAME}:latest"
   fi
 env:
@@ -28,4 +28,12 @@ jobs:
   include:
     - stage: deploy
       if: tag IS present
-      script: make release
+      script: |
+        make release \
+          USER=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
+          EXECUTABLE=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}')
+    - stage: deploy
+      if: tag IS present
+      script: |
+        docker tag ${IMAGE_NAME}:${COMMIT} ${IMAGE_NAME}:$TRAVIS_TAG
+        docker push "${IMAGE_NAME}:$TRAVIS_TAG"
