--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,35 @@
 language: go
 sudo: required
-services:
-- docker
-before_install:
-- docker pull golang:alpine
-install:
-- make \
-    USER=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
-    EXECUTABLE=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}')
-script: |
-  export IMAGE_NAME=gableroux/gothub
-  docker build \
-    --build-arg user=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
-    --build-arg repo=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}') \
-    Dockerfile \
-    -t ${IMAGE_NAME}:${COMMIT} .
-  docker login -u $REGISTRY_USER -p $REGISTRY_PASS
-  docker push "${IMAGE_NAME}:${COMMIT}"
-  if [ "$TRAVIS_BRANCH" == "master" ]; then
-    docker tag ${IMAGE_NAME}:${COMMIT} ${IMAGE_NAME}:latest
-    docker push "${IMAGE_NAME}:latest"
-  fi
+stages:
+- build
+- deploy
 env:
   global:
   - COMMIT=${TRAVIS_COMMIT::8}
 jobs:
   include:
+    - stage: build
+      services:
+      - docker
+      before_install:
+      - docker pull golang:alpine
+      install:
+      - make \
+          USER=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
+          EXECUTABLE=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}')
+      script: |
+        export IMAGE_NAME=gableroux/gothub
+        docker build \
+          --build-arg user=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
+          --build-arg repo=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}') \
+          Dockerfile \
+          -t ${IMAGE_NAME}:${COMMIT} .
+        docker login -u $REGISTRY_USER -p $REGISTRY_PASS
+        docker push "${IMAGE_NAME}:${COMMIT}"
+        if [ "$TRAVIS_BRANCH" == "master" ]; then
+          docker tag ${IMAGE_NAME}:${COMMIT} ${IMAGE_NAME}:latest
+          docker push "${IMAGE_NAME}:latest"
+        fi
     - stage: deploy
       if: tag IS present
       script: |
