--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
           USER=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
           EXECUTABLE=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}')
       script: |
-        export IMAGE_NAME=gableroux/gothub
+        export IMAGE_NAME=$TRAVIS_REPO_SLUG
         docker build \
           --build-arg user=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
           --build-arg repo=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}') \
