--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ jobs:
       script: |
         export IMAGE_NAME=$TRAVIS_REPO_SLUG
         docker build \
-          --build-arg user=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
-          --build-arg repo=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}') \
+          --build-arg USER=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
+          --build-arg REPO=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}') \
           Dockerfile \
           -t ${IMAGE_NAME}:${COMMIT} .
         docker login -u $REGISTRY_USER -p $REGISTRY_PASS
