--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ stages:
 env:
   global:
   - COMMIT=${TRAVIS_COMMIT::8}
+  - DEP_VERSION=v0.4.1
 jobs:
   include:
     - stage: build
@@ -14,6 +15,7 @@ jobs:
       before_install:
       - docker pull golang:alpine
       install:
+      - curl -fsSL -o /usr/local/bin/dep https://github.com/golang/dep/releases/download/$DEP_VERSION/dep-linux-amd64 && chmod +x /usr/local/bin/dep
       - make \
           USER=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}') \
           EXECUTABLE=$(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $2}')
