Fix tag deployment step for docker image

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,5 +44,6 @@ jobs:
     - stage: deploy
       if: tag IS present
       script:
+        - docker pull ${IMAGE_NAME}:${COMMIT}
         - docker tag ${IMAGE_NAME}:${COMMIT} ${IMAGE_NAME}:$TRAVIS_TAG
         - docker push "${IMAGE_NAME}:$TRAVIS_TAG"
